fix: Lukas' comments